localization/v2.4.x/site/ko/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: 이 페이지에서는 Milvus와 상호작용할 수 있는 튜토리얼 목록을 제공합니다.
title: 튜토리얼 개요
---
<h1 id="Tutorials-Overview" class="common-anchor-header">튜토리얼 개요<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>이 페이지에서는 Milvus와 상호작용할 수 있는 튜토리얼 목록을 제공합니다.</p>
<table>
<thead>
<tr><th>튜토리얼</th><th>사용 사례</th><th>관련 Milvus 기능</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/ko/v2.4.x/build-rag-with-milvus.md">Milvus로 RAG 빌드하기</a></td><td>RAG</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/how_to_enhance_your_rag.md">고급 RAG</a></td><td>RAG</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/full_text_search_with_milvus.md">Milvus로 전체 텍스트 검색</a></td><td>빠른 시작</td><td>전체 텍스트 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/hybrid_search_with_milvus.md">Milvus를 사용한 하이브리드 검색</a></td><td>하이브리드 검색</td><td>하이브리드 검색, 멀티 벡터, 고밀도 임베딩, 스파스 임베딩</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/image_similarity_search.md">Milvus를 사용한 이미지 검색</a></td><td>시맨틱 검색</td><td>벡터 검색, 동적 필드</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/multimodal_rag_with_milvus.md">Milvus를 사용한 멀티모달 RAG</a></td><td>RAG</td><td>벡터 검색, 동적 필드</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/multimodal_rag_with_milvus.md">멀티 벡터를 사용한 멀티모달 검색</a></td><td>시맨틱 검색</td><td>멀티 벡터, 하이브리드 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/graph_rag_with_milvus.md">밀버스를 사용한 그래프 RAG</a></td><td>RAG</td><td>그래프 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/contextual_retrieval_with_milvus.md">Milvus를 사용한 문맥 검색</a></td><td>빠른 시작</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/hdbscan_clustering_with_milvus.md">Milvus를 사용한 HDBSCAN 클러스터링</a></td><td>빠른 시작</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/use_ColPali_with_milvus.md">Milvus로 다중 모달 검색에 ColPali 사용</a></td><td>빠른 시작</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/vector_visualization.md">벡터 시각화</a></td><td>빠른 시작</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/movie_recommendation_with_milvus.md">Milvus를 사용한 영화 추천</a></td><td>추천 시스템</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/funnel_search_with_matryoshka.md">마트료시카 임베딩을 사용한 퍼널 검색</a></td><td>빠른 시작</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/question_answering_system.md">질문 답변 시스템</a></td><td>질문 답변</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/recommendation_system.md">추천 시스템</a></td><td>추천 시스템</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/video_similarity_search.md">동영상 유사도 검색</a></td><td>시맨틱 검색</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/audio_similarity_search.md">오디오 유사도 검색</a></td><td>시맨틱 검색</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/dna_sequence_classification.md">DNA 분류</a></td><td>분류</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/text_search_engine.md">텍스트 검색 엔진</a></td><td>시맨틱 검색</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/text_image_search.md">텍스트로 이미지 검색</a></td><td>시맨틱 검색</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/image_deduplication_system.md">이미지 중복 제거</a></td><td>중복 제거</td><td>벡터 검색</td></tr>
</tbody>
</table>
